--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
         </button>
         <div class="nav-links">
             <a href="/" active>Home</a>
-            <a href="/">About</a>
-            <a href="/">Services</a>
-            <a href="/">Packages</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#packages">Packages</a>
             <div class="dropdown">
-                <a href="/">Pages</a>
+                <a href="#package">Pages</a>
                 <div class="dropdown-content">
-                    <a href="/">Airport Transfer</a>
-                    <a href="/">Private Day Tours</a>
-                    <a href="/">Group Day Tours</a>
-                    <a href="/">Multi Day Tours</a>
-                    <a href="/">Winery Tours</a>
+                    <a href="#package">Airport Transfer</a>
+                    <a href="#package">Private Day Tours</a>
+                    <a href="#package">Group Day Tours</a>
+                    <a href="#package">Multi Day Tours</a>
+                    <a href="#package">Winery Tours</a>
                 </div>
             </div>
-            <a href="/">Contact</a>
+            <a href="#contact">Contact</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -52,7 +52,7 @@
     <!-- Hero End -->
 
     <!-- About Start -->
-<div class="about parallax">
+<div class="about parallax" id="about">
 
     <div>
         <h6>About Us</h6>
@@ -93,7 +93,7 @@
             <h6>Categories</h6>
             <h1>Soulful Journeys India Top Tour Categories</h1>
         </div>
-        <div class="carousel-container">
+        <div class="carousel-container" id="package">
             <div class="carousel-items">
                 <a href="/">
                     <img style="width: 500px; height: 250px;" src="/img/airpor-transfer.png" alt="Airport Transfer">
@@ -121,7 +121,7 @@
     <!-- Carousel End -->
 
     <!-- Destination Start -->
-    <div class="destination">
+    <div class="destination" id="services">
         <div>
             <h6>Destination</h6>
             <h1>Explore Top Destinations</h1>
@@ -164,7 +164,7 @@
     <!-- Destination End -->
 
     <!-- Packages Start -->
-    <div class="packages">
+    <div class="packages" id="packages">
         <div>
             <h6>Packages</h6>
             <h1>Perfect Tour Packages</h1>
@@ -223,7 +223,7 @@
     <!-- Packages End -->
 
     <!-- Footer Start -->
-    <footer class="parallax">
+    <footer class="parallax" id="contact">
         <div class="footer-grid">
             <div>
                 <a href="/">
