--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 
 <body data-scroll>
     <!-- Navbar Start -->
     <nav>
         <a href="/">
-            <h1><span>Soulful Journeys </span>India</h1>
+            <img src="logo.png" style="height: 60px;"><h1><span>Soulful Journeys </span>India</h1>
         </a>
         <button>
             <span></span>
@@ -39,7 +40,7 @@
             <a href="#contact">Contact</a>
         </div>
     </nav>
-    <!-- Navbar End -->
+0    <!-- Navbar End -->
 
     <!-- Hero Start -->
     <div class="hero parallax">
