--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body data-scroll>
     <!-- Navbar Start -->
+     <div></div>
     <nav>
         <a href="/">
             <img src="logo.png" style="height: 60px;"><h1><span>Soulful Journeys </span>India</h1>
